@@ -16,7 +16,6 @@ import org.junit.jupiter.api.Test;
 import org.springframework.context.annotation.Import;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import static org.junit.jupiter.api.Assertions.*;
@@ -47,7 +46,7 @@ class DefaultPrincipalAttributesRepositoryTests extends BaseCasCoreTests {
     @Test
     void checkInitialAttributes() throws Throwable {
         val principal = PrincipalFactoryUtils.newPrincipalFactory()
-            .createPrincipal("uid", Collections.singletonMap("mail", List.of("final@example.com")));
+            .createPrincipal("uid", Map.of("mail", List.of("final@example.com")));
         val rep = new DefaultPrincipalAttributesRepository();
         val context = RegisteredServiceAttributeReleasePolicyContext.builder()
             .applicationContext(applicationContext)
@@ -61,7 +60,7 @@ class DefaultPrincipalAttributesRepositoryTests extends BaseCasCoreTests {
     @Test
     void checkAttributesWithRepository() throws Throwable {
         val principal = PrincipalFactoryUtils.newPrincipalFactory().createPrincipal("uid",
-            Collections.singletonMap("mail", List.of("final@example.com")));
+            Map.of("mail", List.of("final@example.com")));
         val context = RegisteredServiceAttributeReleasePolicyContext.builder()
             .applicationContext(applicationContext)
             .principal(principal)
